--- a/new-jwt-app/package.json
+++ b/new-jwt-app/package.json
@@ -5,7 +5,8 @@
   "main": "config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "debug-dev": "cross-env NODE_ENV=development nodemon --inspect index.js"
   },
   "author": "Abhinesh Gour",
   "license": "ISC",
