--- a/new-jwt-app/package.json
+++ b/new-jwt-app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "debug-dev": "cross-env NODE_ENV=development node --inspect index.js"
+    "debug-dev": "cross-env NODE_ENV=development nodemon --inspect index.js"
   },
   "author": "Abhinesh Gour",
   "license": "ISC",
