--- a/new-jwt-app/package.json
+++ b/new-jwt-app/package.json
@@ -14,11 +14,13 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.0",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.4.19",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
