Changes to Run o ncloud server

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "prod": "cross-env NODE_ENV=production nodemon index.js",
     "debug-dev": "cross-env NODE_ENV=development nodemon --inspect index.js"
   },
   "author": "Abhinesh Gour",
