--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.19",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "cross-env": "^5.2.0",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
